# Cursor_MCP_Journey

./: README.md  pyproject.toml
cursor_mcp_slack/: .env.example  __init__.py  server.py  slack.py  slack_tools.py  test_slack.py
