[project]
name = "cursor-mcp-slack"
version = "0.1.0"
description = "Slack MCP service for Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.26.0",
    "mcp[cli]>=1.2.0",
    "uvicorn",
    "starlette",
    "sse-starlette",
    "anyio>=4.5",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
slack = "cursor_mcp_slack.slack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cursor_mcp_slack"] 